# jami-app

./: .replit  LICENSE  README.md  app (copy).py  app.py  app_debug.py  app_v1.py  app_v2.py  app_v3.py  database.py  databasemod.py  generate_jwt.py  pyproject.toml  replit.nix  requirements.txt
drafts/: app (copy).py  app_copy.py  app_old.py  app_v1.py  appmod.py  appold.py  databasemod (copy).py  databasemod.py  generate_jwt.py  home.html  index_old.html  index_spotify_isrc.html  index_v1.html  sample_api_request.py
static/: main.js  main_v3.js  musickit.js
templates/: home.html  index.html  index_apple_json.html  index_debug.html  index_treemp.html  index_v4.html
