[tool.poetry]
name = "repl_nix_jami-app"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
SQLAlchemy = "^2.0.25"
requests = "^2.31.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^5.0.0"
mysql-connector-python = "^8.0.23"
transformers = "^4.47.1"
torch="^1.13.1"
sentencepiece="^0.1.91"
flask_caching = "^2.1.1"
celery[redis]= "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
